Added sponsors section

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -243,3 +243,10 @@ a.nl-link {
 .invert_social {
   filter: invert(0.7);
 }
+
+
+.sponsors-logo {
+  width: auto;
+  max-width: 60%;
+  max-height: 85%;
+}
