Added sponsors section

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -93,3 +93,10 @@
     transform: translateY(0) rotateZ(0deg);
   }
 }
+
+
+.sponsors-logo {
+  width: auto;
+  max-width: 60%;
+  max-height: 85%;
+}
