--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @variants hover, focus {
+    .invert-7 {
+      filter: invert(0.7);
+    }
+    .invert-5 {
+      filter: invert(0.5);
+    }
+  }
+}
+.social-bg {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.width-transition {
+  transition: width 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
 #loader-wrapper {
   height: 100vh;
   width: 100vw;
@@ -100,13 +118,17 @@ About Us
   max-height: 35vh;
 }
 .image2 {
-  height: 70%;
+  height: 50%;
   position: absolute;
-  top: 15%;
+  top: 30%;
   left: 70%;
   display: flex;
   justify-content: end;
   filter: grayscale(0.8);
+  z-index: 0;
+}
+.grayeffect {
+  filter: grayscale(1);
 }
 .image2 img {
   height: 100%;
@@ -213,4 +235,11 @@ a.nl-link {
   height: 100%;
   position: fixed;
   z-index: -1;
+}
+/*
+* Socials 
+*/
+
+.invert_social {
+  filter: invert(0.7);
 }
