--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,6 +39,10 @@
   -webkit-text-stroke: 2px theme('colors.black');
   text-stroke: 2px theme('colors.black');
 }
+.text-stroke-white {
+  -webkit-text-stroke: 2px theme('colors.gray.300');
+  text-stroke: 2px theme('colors.gray.300');
+}
 .rotateme-45 {
   @apply bg-white;
   animation: rotate-45 1s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
@@ -150,7 +154,7 @@ About Us
   background: transparent;
   transition: opacity 0.3s ease-in-out;
 }
-a.nl-link {
+.nl-link {
   color: #fff;
   text-decoration: none;
   position: relative;
@@ -170,7 +174,7 @@ a.nl-link {
   transition: transform 0.3s ease-in-out;
 }
 .nl-link:after {
-  background: #000;
+  @apply bg-base;
   transform: translate3d(-100%, 0, 0);
   transition: transform 0.8s ease;
 }
@@ -242,4 +246,34 @@ a.nl-link {
 
 .invert_social {
   filter: invert(0.7);
+}
+
+/*
+* Event Selection Landing Page 
+*/
+/* .video-container::before {
+  content: '';
+  @apply absolute;
+  background-color: rgba(0, 0, 0, 0.9);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+} */
+
+video {
+  object-fit: cover;
+}
+
+.backdrop {
+  content: '';
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: hidden;
+}
+.h-50vh {
+  height: 50vh;
 }
