sponsors and Event page (#5)
* Added sponsors section

* Added sponsors section

* Addint Events Page

* Component->Page and adding gradient

* Completing changes for events and sponsors page

Co-authored-by: Vinay Kakkad <kakkadvinay25@gmail.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -257,6 +257,10 @@ About Us
   filter: invert(0.7);
 }
 
+.sponsors-logo {
+  width: auto;
+  max-width: 60%;
+  max-height: 85%;
 /*
 * Event Selection Landing Page 
 */
