--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -365,3 +365,53 @@ h1.line-height125 {
   width: 100vw;
   left: 0;
 }
+
+
+/* -------------FAQs------------- */
+
+.tabs__tab:after {
+  margin-top: 8px;
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: -1;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(87.54deg, #9867F0 -6.8%, #ED4E50 84.14%);
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: .4s ease;
+  transition: .4s ease;
+}
+
+.tabs__tab:hover:after  {
+    -webkit-transform: scaleX(0.4);
+          transform: scaleX(0.4);
+}
+
+.current__tab:after {
+  -webkit-transform: scaleX(0.9) !important;
+  transform: scaleX(0.9) !important;
+}
+
+.toggler_active {
+  transform: rotateZ(-180deg);
+}
+
+.answers {
+    position: relative;
+    opacity: 0;
+    z-index: -1;
+    height: 0;
+    width: 95%;
+    transition: padding 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.answer_active {
+    opacity: 1;
+    z-index: auto;
+    height: 100%;
+    padding-bottom: 20px;
+    transform: translateX(5%);
+}
