--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -370,12 +370,6 @@ html {
   scroll-behavior: smooth;
 }
 
-@media screen and (min-width: 768px) {
-  .margin_50 {
-    margin-left: 100%;
-  }
-}
-
 @media screen and (min-width: 1024px) {
   .img_greyscale {
     filter: grayscale(1);
@@ -435,17 +429,24 @@ html {
     }
   }
 }
-@media only screen and (min-width: 1295px) {
+@media only screen and (min-width: 1281px) {
   .icon_size {
-    padding-left: 27%;
-    padding-right: 27%;
+    padding-left: 23%;
+    padding-right: 23%;
   }
 }
 
-@media only screen and (max-width: 1294px) and (min-width: 1000px) {
+@media only screen and (max-width: 1280px) and (min-width: 1180px) {
   .icon_size {
-    padding-left: 22%;
-    padding-right: 22%;
+    padding-left: 26%;
+    padding-right: 26%;
+  }
+}
+
+@media only screen and (max-width: 1180px) and (min-width: 1024px) {
+  .icon_size {
+    padding-left: 23%;
+    padding-right: 23%;
   }
 }
 
@@ -472,15 +473,15 @@ html {
 
 @media only screen and (max-width: 639px) and (min-width: 450px) {
   .icon_padding {
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 26%;
+    padding-right: 26%;
   }
 }
 
 @media only screen and (max-width: 449px) {
   .icon_padding {
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 17%;
+    padding-right: 17%;
   }
 /* -------------FAQs------------- */
 
