Created template for competitions page, added data, updated links (#22)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,6 +12,12 @@
     }
   }
 }
+
+ol,
+ul {
+  list-style-type: disc;
+}
+
 .social-bg {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
