Event page issue fixed

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,6 +12,9 @@
     }
   }
 }
+.body{
+  overflow-x: hidden;
+}
 .social-bg {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
