--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,6 +18,15 @@ ul {
   list-style-type: disc;
 }
 
+@font-face {
+  font-family: 'Aileron';
+  src: url('../fonts/aileron_regular.otf') format('opentype');
+}
+
+.nav-font {
+  font-family: 'Aileron';
+}
+
 .social-bg {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -55,8 +64,8 @@ ul {
 }
 
 .text-stroke-white {
-  -webkit-text-stroke: 2px theme('colors.gray.300');
-  text-stroke: 2px theme('colors.gray.300');
+  -webkit-text-stroke: 2px theme('colors.white');
+  text-stroke: 2px theme('colors.white');
 }
 .text-stroke-transparent {
   -webkit-text-stroke: 2px transparent;
@@ -76,14 +85,14 @@ ul {
   }
   100% {
     transform: rotate(-45deg) translateY(-0.25rem);
-    @apply bg-black;
+    @apply bg-white;
   }
 }
 
 @keyframes rotate-45-back {
   0% {
     transform: rotate(-45deg) translateY(-0.25rem);
-    @apply bg-black;
+    @apply bg-white;
   }
   100% {
     transform: rotate(0) translateY(3px);
@@ -106,14 +115,14 @@ ul {
   }
   100% {
     transform: rotate(45deg);
-    @apply bg-black;
+    @apply bg-white;
   }
 }
 
 @keyframes rotate45back {
   0% {
     transform: rotate(45deg);
-    @apply bg-black;
+    @apply bg-white;
   }
   100% {
     transform: rotate(0) translateY(-3px);
@@ -524,7 +533,7 @@ html {
   }
 }
 
-.maximum_width{
+.maximum_width {
   max-width: 300px;
 }
 /* -------------FAQs------------- */
