--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,12 +13,8 @@
   }
 }
 
-body{
+body {
   overflow-x: hidden;
-}
-ol,
-ul {
-  list-style-type: disc;
 }
 
 @font-face {
@@ -592,7 +588,7 @@ html {
   transform: rotateZ(-180deg);
 }
 
-/* Event page tooltip */
+/* Competition and Workshop page */
 
 .tooltip {
   display: none;
@@ -602,4 +598,28 @@ html {
 .has-tooltip:hover .tooltip {
   display: block;
   z-index: 10;
+}
+
+.register-button {
+  border: 3px solid;
+  border-image-slice: 1;
+  border-width: 3px;
+  border-image-source: linear-gradient(
+    to bottom right,
+    rgb(239, 68, 68),
+    rgb(129, 140, 248)
+  );
+  transition: all 300ms;
+}
+
+.register-button:hover {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(239, 68, 68),
+    rgb(129, 140, 248)
+  );
+}
+
+.event-rules:is(ol, ul) {
+  list-style-type: decimal;
 }
