--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -713,4 +713,15 @@ html {
     transform-origin: 0% 0%;
   }
 }
+.interactionBox {
+  width: 100%;
+  height: 100%;
+}
+@media screen and (min-width: 500px) {
+  .interactionBox {
+    width: 50%;
+    height: 100%;
+  }
+}
+
 /* For temp purpose */
