Chnaged Card in Sponsers

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,7 +15,7 @@
 
 body {
   overflow-x: hidden;
-  background-color: #090906;
+  background-color: #000000;
 }
 
 @font-face {
@@ -771,18 +771,20 @@ html {
 }
 
 /* Needs Some Changes Haven't used anywhere */
-.bg-blur {
+/* .bg-blur {
   background: rgba(0, 0, 0, 0.1);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: saturate(270%) blur(15px);
   -webkit-backdrop-filter: saturate(270%) blur(15px);
   z-index: -8;
-} 
+}  */
 
 .bg-blur-light {
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0 4px 30px rgba(20, 20, 20, 0.15);
-  backdrop-filter: saturate(180%) blur(15px);
-  -webkit-backdrop-filter: saturate(180%) blur(15px);
-  z-index: -8;
+/* From https://css.glass */
+background: rgba(255, 255, 255, 0.1);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5.1px);
+-webkit-backdrop-filter: blur(5.1px);
+/* border: 1px solid rgba(255, 255, 255, 0.44); */
 } 
