--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -812,3 +812,25 @@ html {
   -webkit-backdrop-filter: saturate(180%) blur(15px);
   box-shadow: 0 5px 20px -5px rgba(20, 20, 20, 0.1);
 }
+
+
+@media only screen and (max-width: 550px) {
+  .event-gradient-left {
+    max-width: 100%;
+    display: block;
+    position: fixed;
+    left: -30%;
+    bottom: -25%;
+    right: -20%;
+    z-index: -1;
+  }
+  
+  .event-gradient-right {
+    max-width: 100%;
+    display: block;
+    position: fixed;
+    top: -10%;
+    right: -10%;
+    z-index: -1;
+  }
+}
